if BUILD_UNFINISHED
UNFINISHED = metadata
endif

SUBDIRS = \
	vacation \
	subaddress \
	comparator-i-ascii-numeric \
	relational \
	regex \
	imap4flags \
	copy \
	include \
	body \
	variables \
	enotify \
	notify \
	environment \
	mailbox \
	date \
	spamvirustest \
	ihave \
	editheader \
	duplicate \
	index \
	vnd.dovecot \
	$(UNFINISHED)


