if BUILD_UNFINISHED
UNFINISHED = 
endif

SUBDIRS = \
	vacation \
	subaddress \
	comparator-i-ascii-numeric \
	relational \
	regex \
	imap4flags \
	copy \
	include \
	body \
	variables \
	enotify \
	environment \
	mailbox \
	date \
	spamvirustest \
	ihave \
	editheader \
	duplicate \
	index \
	metadata \
	mime \
	special-use \
	extlists \
	vnd.dovecot \
	$(UNFINISHED)


