noinst_LTLIBRARIES = libsieve_ext_comparator-i-ascii-numeric.la

AM_CPPFLAGS = \
	-I../../ \
	-I$(dovecot_incdir) \
	-I$(dovecot_incdir)/src/lib \
	-I$(dovecot_incdir)/src/lib-mail \
	-I$(dovecot_incdir)/src/lib-storage 

libsieve_ext_comparator_i_ascii_numeric_la_SOURCES = \
	ext-cmp-i-ascii-numeric.c

EXTRA_DIST = *.txt *.sieve
